Source/WebKit2/UIProcess/mac/WKActionMenuController.h
@@ -61,7 +61,10 @@ enum class ActionMenuState {
     RefPtr<API::Object> _userData;
     _WKActionMenuType _type;
     RetainPtr<NSSharingServicePicker> _sharingServicePicker;
+
     RetainPtr<NSPopover> _previewPopover;
+    NSPoint _eventLocationInView;
+    NSRect _popoverOriginRect;
 
     BOOL _isShowingTextIndicator;
     BOOL _shouldKeepPreviewPopoverOpen;
